# Robot-serving-system

./: README.md  b-5  Serving_System.pptx  map.pgm  map.yaml
log/: latest_list
src/order_management_interfaces/: CMakeLists.txt  package.xml
src/order_management_interfaces/msg/: OrderDetails.msg  RobotControl.msg
src/order_management_interfaces/srv/: OrderValidation.srv
src/robot_food_service/: package.xml  setup.cfg  setup.py
src/robot_food_service/robot_food_service/: kitchen_display.py  order_table.py  robot_control.py
